[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "w2s"
description = "Experimenting with weak-to-strong generalization in deep learning"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "interpretability", "generalization"]
license = {text = "MIT License"}
dependencies = [
    "datasets",
    "torch",
    "peft",
    "scipy",
    "simple-parsing",
    "fire ~= 0.4",
    "pynvml ~= 11.5",
    "scikit-learn ~= 1.3.2",
    # 4.0 introduced the breaking change of using return_dict=True by default
    "transformers>=4.0.0",
    "wandb",
]
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[tool.pyright]
include = ["w2s*"]
reportPrivateImportUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["w2s*"]

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
select = ["E", "F", "I"]
# Same as Black.
line-length = 88
# Avoid automatically removing unused imports in __init__.py files.
# Such imports will be flagged with a dedicated message suggesting
# that the import is either added to the module's __all__ symbol
ignore-init-module-imports = true
